--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -55,7 +55,7 @@
             您可以点击<a style="text-decoration:none;
             color:#12addb" target="_blank" th:href="@{${url}}">查看回复的完整內容</a>
             ，欢迎再次光临<a style="text-decoration:none;
-            color:#12addb" href="https://www.linhaojun.top/" target="_blank">花未眠的个人博客</a>。
+            color:#12addb" href="http://heyqing.top/" target="_blank">何以晴的个人博客</a>。
         </p>
         <div style="color: #8c8c8c; font-size: 10px;width: 100%;text-align: center;word-wrap: break-word;">
             <p style="padding: 20px">不管当下的境遇如何，提瓦特大陆的星空永远会有你的位置。——《原神》</p>
