--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -29,7 +29,7 @@
         background-color: hsla(0,0%,100%,.4);
         border-radius: 10px 10px 0 0;">
             来自<a style="text-decoration:none;
-            color:#12addb" href="https://heyqing.top">何以晴的个人博客</a>的邮件
+            color:#12addb" href="http://heyqing.top/blog/">【初晴】</a>的邮件
         </p>
     </div>
     <div style="margin:20px auto;width:90%">
@@ -41,7 +41,7 @@
             <p th:utext="${content}"></p>
         </div>
         <div style="color: #8c8c8c; font-size: 10px;width: 100%;text-align: center;word-wrap: break-word;">
-            <p style="padding: 20px">不管当下的境遇如何，提瓦特大陆的星空永远会有你的位置。——《原神》</p>
+            <p style="padding: 20px">“多少事，从来急；天地转，光阴迫。一万年太久，只争朝夕。” —— 毛泽东</p>
         </div>
     </div>
 </div>
