--- a/src/main/resources/templates/owner.html
+++ b/src/main/resources/templates/owner.html
@@ -47,7 +47,7 @@
             color:#12addb" th:href="@{${url}}" target="_blank">查看回复的完整內容</a>
         </p>
         <div style="color: #8c8c8c; font-size: 10px;width: 100%;text-align: center;word-wrap: break-word;">
-            <p style="padding: 20px">不管当下的境遇如何，提瓦特大陆的星空永远会有你的位置。——《原神》</p>
+            <p style="padding: 20px">“以铜为镜，可以正衣冠；以古为镜，可以知兴替；以人为镜，可以明得失。” —— 李世民</p>
         </div>
     </div>
 </div>
