--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -29,7 +29,7 @@
         background-color: hsla(0,0%,100%,.4);
         border-radius: 10px 10px 0 0;">
             您在<a style="text-decoration:none;
-            color:#12addb;" href="https://heyqing.top/" target="_blank">何以晴的个人博客</a>上的留言有新回复啦！
+            color:#12addb;" href="http://heyqing.top/blog/" target="_blank">【初晴】</a>上的留言有新回复啦！
         </p>
     </div>
     <div style="margin:20px auto;width:90%">
@@ -55,10 +55,10 @@
             您可以点击<a style="text-decoration:none;
             color:#12addb" target="_blank" th:href="@{${url}}">查看回复的完整內容</a>
             ，欢迎再次光临<a style="text-decoration:none;
-            color:#12addb" href="http://heyqing.top/" target="_blank">何以晴的个人博客</a>。
+            color:#12addb" href="http://heyqing.top/blog/" target="_blank">【初晴】</a>。
         </p>
         <div style="color: #8c8c8c; font-size: 10px;width: 100%;text-align: center;word-wrap: break-word;">
-            <p style="padding: 20px">不管当下的境遇如何，提瓦特大陆的星空永远会有你的位置。——《原神》</p>
+            <p style="padding: 20px">“大丈夫当如是也。” —— 刘邦</p>
         </div>
     </div>
 </div>
